--- a/Styles/settings.css
+++ b/Styles/settings.css
@@ -20,7 +20,7 @@
 .settings_fields{
     position: fixed;
     top: 12%;
-    left: 290px;
+    left: 43%;
     height: 100%;
     width: 100%;
     transition: var(--tran-05);
@@ -36,6 +36,7 @@
     text-indent: 10px;
     color: var(--text-color);   
     background: var(--primary-color-light);
+    transition: var(--tran-04);
 }
 .settings_fields input#password{    
     height: 40px;
@@ -47,8 +48,30 @@
     font-weight: 500;
     text-indent: 10px;
     color: var(--text-color);   
-    background: var(--primary-color-light);    
+    background: var(--primary-color-light);
+    transition: var(--tran-04);    
 }
+
+/*.form__input {
+    width: 20.4rem;
+    height: 4rem;
+    border: none;
+    border-radius: 1rem;
+    font-size: 1.4rem;
+    padding-left: 1.4rem;
+    box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
+    background: none;
+    font-family: inherit;
+    color: var(--greyDark);
+}
+.form__input::placeholder {
+    color: var(--greyLight-3);
+}
+.form__input:focus {
+    outline: none;
+    box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
+}*/
+
 .sidebar.close ~ .settings_fields{
     left: 130px;
     width: calc(100% - 88px);
@@ -107,3 +130,86 @@
     margin-left: 16.5%;
     cursor: pointer;
 }*/
+
+/*.settings_card{
+    position: relative;
+    width: 370px;
+    padding: 30px;
+    
+    bottom: 90%;
+    left: 20%;
+    border-radius: 7px;
+    background: var(--sidebar-color);
+    transition: var(--tran-05);
+    z-index: 99;
+}
+.settings_card header {
+    font-size: 28px;
+    font-weight: 500;
+    text-align: center;
+    color: var(--text-color);
+    transition: var(--tran-03);
+}*/
+
+.waves {
+    position:fixed;
+    top: 85%;
+    width: 100%;
+    height:15vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
+}
+
+/* Animation */
+
+.parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+}
+.parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+}
+@keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+    .waves {
+      height:40px;
+      min-height:40px;
+    }
+    .content {
+      height:30vh;
+    }
+    h1 {
+      font-size:24px;
+    }
+}
+
+.stng_man{
+    position: absolute;
+    height: 700px;
+    width: 700px;
+    top: 80px;
+    left: 60%;
+    right: 40px;
+    opacity: 0.5;
+}
