--- a/Styles/table.css
+++ b/Styles/table.css
@@ -80,3 +80,44 @@
 .listData > li:not(:first-child){
   cursor: pointer;
 }
+
+.description{
+  position: absolute;
+  top: 200px;
+  left: 40%;
+  
+
+
+  text-align: center;
+}
+
+/* Общие стили для контейнера */
+.scroll-container {
+  overflow: auto;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+/* Стили полосы прокрутки */
+.scroll-container::-webkit-scrollbar {
+  width: 0.7rem; /* Ширина полосы прокрутки */
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+  background-color: #d4d4d4; /* Цвет полосы прокрутки */
+  border-radius: 4px; /* Скругление углов полосы прокрутки */
+}
+
+.scroll-container::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a0; /* Цвет полосы прокрутки при наведении */
+}
+
+.scroll-container::-webkit-scrollbar-track {
+  background-color: #f2f2f2; /* Цвет фона полосы прокрутки */
+  border-radius: 4px; /* Скругление углов фона полосы прокрутки */
+}
+
+.scroll-container::-webkit-scrollbar-track:hover {
+  background-color: #e5e5e5; /* Цвет фона полосы прокрутки при наведении */
+}
