--- a/Styles/login.css
+++ b/Styles/login.css
@@ -11,14 +11,14 @@ body
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #23242a;
+    background: #ececec;
 }
 .box
 {
     position: relative;
     width: 380px;
     height: 470px;
-    background: #1c1c1c;
+    background: #ddd;
     border-radius: 8px;
     overflow: hidden;
 }
@@ -30,8 +30,10 @@ body
     left: -50%;
     width: 380px;
     height: 470px;
-    background: linear-gradient(0deg, transparent, #25dbc9,
-    #25dbc9);
+    background: linear-gradient(0deg, 
+            transparent, 
+            #695cfe,
+            #695cfe);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
 }
@@ -43,8 +45,10 @@ body
     left: -50%;
     width: 380px;
     height: 470px;
-    background: linear-gradient(0deg, transparent, #25dbc9,
-    #25dbc9);
+    background: linear-gradient(0deg, 
+            transparent, 
+            #695cfe,
+            #695cfe);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
     animation-delay: -3s;
@@ -65,7 +69,7 @@ body
     position: absolute;
     inset: 2px;
     border-radius: 8px;
-    background: #28292d;
+    background: #fff;
     z-index: 10;
     padding: 50px 40px;
     display: flex;
@@ -73,7 +77,7 @@ body
 }
 .form h2
 {
-    color: #25dbc9;
+    color: #695cfe;
     font-weight: 500;
     text-align: center;
     letter-spacing: 0.1em;
@@ -104,7 +108,7 @@ body
     left: 0;
     padding: 20px 0px 10px;
     font-size: 1em;
-    color: #8f8f8f;
+    color: #707070;
     pointer-events: none;
     letter-spacing: 0.05em;
     transition: 0.5s;
@@ -112,7 +116,7 @@ body
 .inputBox input:valid ~ span,
 .inputBox input:focus ~ span
 {
-    color: #25dbc9;
+    color: #695cfe;
     transform: translateX(0px) translateY(-34px);
     font-size: 0.75em;
 }
@@ -123,7 +127,7 @@ body
     bottom: 0;
     width: 100%;
     height: 2px;
-    background: #25dbc9;
+    background: #695cfe;
     border-radius: 4px;
     transition: 0.5s;
     pointer-events: none;
@@ -149,13 +153,13 @@ body
 .links a:hover,
 .links a:nth-child(2)
 {
-    color: #25dbc9;
+    color: #695cfe;
 }
 input[type="button"]
 {
     border: none;
     outline: none;
-    background: #25dbc9;
+    background: #695cfe;
     padding: 11px 25px;
     width: 100px;
     margin-top: 10px;
