--- a/Styles/register.css
+++ b/Styles/register.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #23242a;
+    background: #ececec;
 }
 
 .box {
@@ -18,7 +18,7 @@ body {
     width: 380px;
     height: 620px;
     left: 130px;
-    background: #1c1c1c;
+    background: #ddd;
     border-radius: 8px;
     overflow: hidden;
 }
@@ -32,8 +32,8 @@ body {
     height: 620px;
     background: linear-gradient(0deg,
             transparent,
-            #25dbc9,
-            #25dbc9);
+            #695cfe,
+            #695cfe);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
 }
@@ -47,8 +47,8 @@ body {
     height: 620px;
     background: linear-gradient(0deg,
             transparent,
-            #25dbc9,
-            #25dbc9);
+            #695cfe,
+            #695cfe);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
     animation-delay: -3s;
@@ -68,7 +68,7 @@ body {
     position: absolute;
     inset: 2px;
     border-radius: 8px;
-    background: #28292d;
+    background: #fff;
     z-index: 10;
     padding: 50px 40px;
     display: flex;
@@ -76,7 +76,7 @@ body {
 }
 
 .form h2 {
-    color: #25dbc9;
+    color: #695cfe;
     font-weight: 500;
     text-align: center;
     letter-spacing: 0.1em;
@@ -96,7 +96,7 @@ body {
     background: transparent;
     border: none;
     outline: none;
-    color: #23242a;
+    color: #23242a; /* text color */
     font-size: 1em;
     letter-spacing: 0.05em;
     z-index: 10;
@@ -107,7 +107,7 @@ body {
     left: 0;
     padding: 20px 0px 10px;
     font-size: 1em;
-    color: #8f8f8f;
+    color: #707070;
     pointer-events: none;
     letter-spacing: 0.05em;
     transition: 0.5s;
@@ -115,7 +115,7 @@ body {
 
 .inputBox input:valid~span,
 .inputBox input:focus~span {
-    color: #25dbc9;
+    color: #695cfe;
     transform: translateX(0px) translateY(-34px);
     font-size: 0.75em;
 }
@@ -126,7 +126,7 @@ body {
     bottom: 0;
     width: 100%;
     height: 2px;
-    background: #25dbc9;
+    background: #695cfe;
     border-radius: 4px;
     transition: 0.5s;
     pointer-events: none;
@@ -152,13 +152,13 @@ body {
 
 .links a:hover,
 .links a:nth-child(2) {
-    color: #25dbc9;
+    color: #695cfe;
 }
 
 input[type="button"] {
     border: none;
     outline: none;
-    background: #25dbc9;
+    background: #695cfe;
     padding: 11px 25px;
     width: 100px;
     margin-top: 10px;
@@ -176,7 +176,7 @@ button[type="button"] {
     height: 38px;
     width: 100px;
     border: none;
-    background: #25dbc9;
+    background: #695cfe;
     border-radius: 4px;
     cursor: pointer;
     margin: 494px 0;
@@ -193,7 +193,7 @@ button[type="button"]:active {
     width: 20px;
     top: 19px;
     right: 4px;
-    filter: invert(100%);
+    /*filter: invert(100%);*/
     cursor: pointer;
     z-index: 10;
 }
@@ -204,7 +204,7 @@ button[type="button"]:active {
     width: 20px;
     top: 19px;
     right: 4px;
-    filter: invert(100%);
+    /*filter: invert(100%);*/
     cursor: pointer;
     z-index: 10;
 }
@@ -241,13 +241,13 @@ button[type="button"]:active {
 .validationCheck ul li {
     /*position: relative;*/
     list-style: none;
-    color: #fff;
+    color: #23242a;
     font-size: 0.85em;
     transition: 0.5s;
 }
 
 .validationCheck ul li.valid {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(94, 94, 94, 0.5);
 }
 
 .validationCheck ul li::before {
@@ -261,7 +261,7 @@ button[type="button"]:active {
 
 .validationCheck ul li.valid::before {
     content: "\f00c";
-    color: #0f0;
+    color: #61ff61;
 }
 
 #toastBox {
