--- a/Styles/home.css
+++ b/Styles/home.css
@@ -1,8 +1,8 @@
 /* Google Font Import - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -322,7 +322,7 @@ body.dark .switch::before {
     width: calc(100% - 88px);
 }
 
-/* converter css */
+/* CONVERTER */
 .wrapper {
     position: relative;
     width: 370px;
@@ -403,7 +403,7 @@ form .drop-list {
 .select-box select {
     /*width: auto;*/
     cursor: pointer;
-    width: 54px;
+    width: 58px;
     font-size: 16px;
     margin: 0 -5 0 5px;
     background: var(--sidebar-color);
